# Call_me_maybe

./: Makefile  README.md  pyproject.toml
data/input/: function_calling_tests.json
src/: .__init__.py.swp  __init__.py  cli.py  config.py  errors.py
src/file_io/: __init__.py  reader.py  writer.py
src/io/: __init__.py
src/llm/: __init__.py  client.py  constrained_decoder.py  prompt_builder.py  vocabulary.py
src/models/: __init__.py  function_call_result.py  function_definition.py  prompt_input.py  selection_result.py
src/services/: __init__.py  argument_extractor.py  function_selector.py  parameter_extractor.py  pipeline.py  schema_validator.py
tests/: test_function_selector.py  test_output_contract.py  test_parameter_extractor.py  test_pipeline.py
