[project]
name = "call-me-maybe"
version = "0.1.0"
authors = [
  { name = "Pedro Henrique Dinis Lellis" }
]
description = "Function calling with constrained decoding for small LLMs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.0",
    "pydantic>=2.7.0",
]

[dependency-groups]
dev = [
    "flake8>=7.0.0",
    "mypy>=1.10.0",
    "pytest>=8.2.0",
]

[tool.uv]
package = false

[tool.flake8]
max-line-length = 88
exclude = [
    ".venv",
    "__pycache__",
    ".mypy_cache",
    ".pytest_cache",
    "build",
    "dist",
    "llm_sdk",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
pretty = true
explicit_package_bases = true
exclude = [
    "^llm_sdk/"
]

[[tool.mypy.overrides]]
module = ["llm_sdk", "llm_sdk.*"]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
